--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,6 +8,14 @@ dependencies {
         exclude group:'javax.annotation', module: 'javax.annotation-api'
         exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
     }
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.0.3.RELEASE') {
+        exclude group:'javax.annotation', module: 'javax.annotation-api'
+        exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
+    }
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.3.RELEASE'){
+        exclude group:'javax.annotation', module: 'javax.annotation-api'
+        exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
+    }
 
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.0.3.RELEASE'
 
@@ -16,6 +24,8 @@ dependencies {
     compile (group: 'com.google.guava', name: 'guava', version: '25.1-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
+// https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
