--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -3,7 +3,9 @@ dependencies {
         exclude group:'javax.annotation', module: 'javax.annotation-api'
         exclude group:'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
-    compile 'org.neo4j.driver:neo4j-java-driver:1.4.4'
+    compile 'org.neo4j:neo4j:3.4.5'
+//    compile 'org.neo4j.driver:neo4j-java-driver:1.4.4'
+    compile 'org.neo4j:neo4j-ogm-embedded-driver:3.1.0'
     compile 'com.mpatric:mp3agic:0.9.1'
     compile (group: 'com.google.guava', name: 'guava', version: '25.1-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
@@ -12,14 +14,14 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-ext.moduleName = 'org.maidavale.music.persistence'
-
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-        ]
-        classpath = files()
-    }
-}
+//ext.moduleName = 'org.maidavale.music.persistence'
+//
+//compileJava {
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//        ]
+//        classpath = files()
+//    }
+//}
