--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #org.springframework.data.rest.level=DEBUG
 #debug: true
-spring.data.neo4j.uri=bolt://localhost
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=password
+#spring.data.neo4j.uri=bolt://localhost
+#spring.data.neo4j.username=neo4j
+#spring.data.neo4j.password=password
+spring.data.neo4j.uri=file:///var/tmp/neo4j.db
+logging.level.org.springframework.security=DEBUG
