--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,19 @@
+ext {
+    springVersion = '2.0.5.RELEASE'
+}
+
+apply plugin: "com.github.ben-manes.versions"
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
+    }
+}
+
 subprojects {
     apply plugin: 'java'
 
@@ -5,6 +21,7 @@ subprojects {
     version '1.0-SNAPSHOT'
 
     sourceCompatibility = 10
+    targetCompatibility = 10
 
     repositories {
         mavenCentral()
@@ -12,5 +29,20 @@ subprojects {
 
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        
+        // See https://groups.google.com/forum/#!topic/trellis-ldp/kFBa-5Zl2ME
+        implementation ("org.apache.commons:commons-lang3:3.7") {force = true}
+        implementation ("commons-io:commons-io:2.6") {force = true}
+        implementation ("com.fasterxml.jackson.core:jackson-databind:2.9.6") {force = true}
     }
+    
+    //compileJava {
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//        ]
+//        classpath = files()
+//    }
+//}
 }
