--- a/persistence/src/main/resources/application.properties
+++ b/persistence/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 #debug: true
 spring.data.neo4j.uri=bolt://localhost
 spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=password
+spring.data.neo4j.password=cheese
