--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,43 +1,30 @@
 plugins {
-    id 'org.springframework.boot' version '2.0.3.RELEASE'
+    id "org.springframework.boot" version '2.0.5.RELEASE'
 }
+
+apply plugin: 'io.spring.dependency-management'
 
 dependencies {
     compile project(':persistence')
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.3.RELEASE') {
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
         exclude group:'javax.annotation', module: 'javax.annotation-api'
         exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
     }
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.0.3.RELEASE') {
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator') {
         exclude group:'javax.annotation', module: 'javax.annotation-api'
         exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
     }
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.3.RELEASE'){
-        exclude group:'javax.annotation', module: 'javax.annotation-api'
-        exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
-    }
-
-    compile group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.0.3.RELEASE'
-
-    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version:'8.5.31'
-
-    compile (group: 'com.google.guava', name: 'guava', version: '25.1-jre') {
+//    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-security') {
+//        exclude group:'javax.annotation', module: 'javax.annotation-api'
+//        exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
+//    }
+    compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
+    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version:'9.0.12'
+    compile (group: 'com.google.guava', name: 'guava', version: '26.0-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
-// https://mvnrepository.com/artifact/commons-io/commons-io
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 ext.moduleName = 'org.maidavale.music.web'
-
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-        ]
-        classpath = files()
-    }
-}
