--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,4 +3,4 @@
 #spring.data.neo4j.uri=bolt://localhost
 #spring.data.neo4j.username=neo4j
 #spring.data.neo4j.password=password
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
