--- a/web/build.gradle
+++ b/web/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'io.spring.dependency-management'
 
 dependencies {
     compile project(':persistence')
+
+    compile (group: 'org.springframework.data', name: 'spring-data-rest-webmvc')
     compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
         exclude group:'javax.annotation', module: 'javax.annotation-api'
         exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
