--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.springframework.boot" version '2.0.5.RELEASE'
+    id "org.springframework.boot" version '2.1.3.RELEASE'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -21,12 +21,18 @@ dependencies {
         exclude group:'org.apache.tomcat', module: 'tomcat-annotations-api'
     }
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
-    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version:'9.0.12'
-    compile (group: 'com.google.guava', name: 'guava', version: '26.0-jre') {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+// https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.5.RELEASE'
+
+    compile group: 'org.apache.tomcat', name: 'tomcat-annotations-api', version:'9.0.17'
+    compile (group: 'com.google.guava', name: 'guava', version: '27.1-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile 'org.hsqldb:hsqldb:2.4.1'
 }
 
 ext.moduleName = 'org.maidavale.music.web'
