--- a/web/build.gradle
+++ b/web/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
     
-//    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2'
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version : '2.3.5.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-client'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
