--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 ext {
-    springVersion = '2.1.4.RELEASE'
+    springVersion = '2.2.4.RELEASE'
 }
 
 apply plugin: "com.github.ben-manes.versions"
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.27.0"
     }
 }
 
@@ -20,20 +20,20 @@ subprojects {
     group 'org.maidavale.music'
     version '1.0-SNAPSHOT'
 
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 13
+    targetCompatibility = 13
 
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+//        testCompile group: 'junit', name: 'junit', version: '4.12'
         
         // See https://groups.google.com/forum/#!topic/trellis-ldp/kFBa-5Zl2ME
-        implementation ("org.apache.commons:commons-lang3:3.8.1") {force = true}
-        implementation ("commons-io:commons-io:2.6") {force = true}
-        implementation ("com.fasterxml.jackson.core:jackson-databind:2.9.8") {force = true}
+//        implementation ("org.apache.commons:commons-lang3:3.8.1") {force = true}
+//        implementation ("commons-io:commons-io:2.6") {force = true}
+//        implementation ("com.fasterxml.jackson.core:jackson-databind:2.9.8") {force = true}
     }
     
 //compileJava {
