--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "org.springframework.boot" version '2.1.4.RELEASE'
+    id "org.springframework.boot" version '2.2.4.RELEASE'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -15,19 +15,21 @@ dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
     
-    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version : '2.3.5.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
+//    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version : '2.4.0.RELEASE'
+
+    compile group: 'org.springframework.security', name: 'spring-security-config', version : '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version : '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version : '5.2.2.RELEASE'
+//    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version : '5.2.2.RELEASE'
     
     compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-    compile (group: 'com.google.guava', name: 'guava', version: '27.1-jre') {
+    compile (group: 'com.google.guava', name: 'guava', version: '28.2-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.13'
 
-    compile 'org.hsqldb:hsqldb:2.4.1'
+    compile 'org.hsqldb:hsqldb:2.5.0'
 }
 
 ext.moduleName = 'org.maidavale.music.web'
