--- a/web/build.gradle
+++ b/web/build.gradle
@@ -7,29 +7,23 @@ apply plugin: 'io.spring.dependency-management'
 dependencies {
     compile project(':persistence')
 
-    compile group: 'org.springframework.data', name: 'spring-data-rest-webmvc'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
-    
-//    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version : '2.4.0.RELEASE'
 
     compile group: 'org.springframework.security', name: 'spring-security-config', version : '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version : '5.2.2.RELEASE'
     compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version : '5.2.2.RELEASE'
-//    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version : '5.2.2.RELEASE'
-    
-    compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+
     compile (group: 'com.google.guava', name: 'guava', version: '28.2-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     testCompile group: 'junit', name: 'junit', version: '4.13'
-
-    compile 'org.hsqldb:hsqldb:2.5.0'
 }
 
 ext.moduleName = 'org.maidavale.music.web'
