--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,8 +1,10 @@
 plugins {
-    id "org.springframework.boot" version '2.2.4.RELEASE'
+    id "org.springframework.boot" version '2.3.2.RELEASE'
 }
 
 apply plugin: 'io.spring.dependency-management'
+
+def springSecurityVersion = '5.3.3.RELEASE'
 
 dependencies {
     compile project(':persistence')
@@ -13,16 +15,16 @@ dependencies {
 
     compile group: 'org.springframework.boot', name: 'spring-boot-devtools'
 
-    compile group: 'org.springframework.security', name: 'spring-security-config', version : '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version : '5.2.2.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version : '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version : springSecurityVersion
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version : springSecurityVersion
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version : springSecurityVersion
 
-    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: springSecurityVersion
 
-    compile (group: 'com.google.guava', name: 'guava', version: '28.2-jre') {
+    compile (group: 'com.google.guava', name: 'guava', version: '29.0-jre') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
     }
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'commons-io', name: 'commons-io', version: '2.7'
     testCompile group: 'junit', name: 'junit', version: '4.13'
 }
 
